fixed sizing issues on mobile
--mobile width for registration page
--image changes for home page

--- a/Webpack/assets/css/4-layouts/mobile.sass
+++ b/Webpack/assets/css/4-layouts/mobile.sass
@@ -2,7 +2,7 @@
   #ourmissionheader
     width: 100vw
     margin: 0
-  #ourmissioncontent, #homecontent, #eventcontent,#eventregister,#newscontent, #contactinfo, #ourgivingcontent, #shirtcontent
+  #ourmissioncontent, #homecontent, #eventcontent,#eventregister,#newscontent, #contactinfo, #ourgivingcontent, .shirtcontent, #sponsorcontent
     width: 90vw !important
     margin-bottom: 50px !important
   #eventcontent ,.scholarshipcontent
@@ -37,3 +37,18 @@
   #donations
     form
       margin-top: 0
+.lastpic
+  width: 30vw
+  overflow: none
+  img
+    width: 30vw !important
+    max-height: 100%
+    max-width: 20vw !important
+.paypalbutton
+  width: 1px !important
+  height: 1px !important
+  min-width: 1px !important
+.paypalform
+  max-width: 500px
+  width: 50vw !important
+  border: 1px soilid red
